# ZUIKI-MASCON-to-JRETS

./: .gitignore  LICENSE  README.md  accessibility_permission.py  main.py  mascon_controller.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.macos.txt  requirements.txt  status_window.py  test_accessibility_permission.py  test_embed_build_version.py  test_main.py  test_mascon_controller.py  test_status_window.py  version_info.py
.github/: dependabot.yml
.github/workflows/: python-app.yml
scripts/: build_app_icon.py  embed_build_version.py  package_macos_app.sh
tests/vrt/: status.spec.js
typings/ApplicationServices/: __init__.pyi
web/: app.js  fake_notch.html  index.html  styles.css
