[project]
name = "zuiki-mascon-to-jrets"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyautogui==0.9.54",
    "pygame==2.6.1",
    "pyobjc-core==12.1; platform_system == 'Darwin'",
    "pyobjc-framework-cocoa==12.1; platform_system == 'Darwin'",
    "pyobjc-framework-quartz==12.1; platform_system == 'Darwin'",
    "rubicon-objc==0.5.3",
]

[dependency-groups]
build = [
    "pyinstaller==6.20.0",
    "pyinstaller-hooks-contrib==2026.4",
]
lint = [
    "black==26.3.0",
    "flake8==7.3.0",
]
test = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
]

[tool.uv]
package = false
