[project]
name = "zuiki-mascon-to-jrets"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyautogui==0.9.54",
    "pygame==2.6.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "black==26.5.1",
    "flake8==7.3.0",
    "pyinstaller==6.21.0",
    "pytest==9.1.1",
    "pytest-mock==3.15.1",
]

[tool.uv]
package = false

[tool.basedpyright]
include = ["*.py"]
typeCheckingMode = "strict"
