[project]
name = "zuiki-mascon-to-jrets"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyautogui==0.9.54",
    "pygame==2.6.1",
    "pyobjc-framework-applicationservices==12.2.1 ; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pyinstaller==6.21.0",
    "pytest==9.1.1",
    "pytest-mock==3.15.1",
    "ruff>=0.15.22",
]

[tool.uv]
package = false

[tool.ruff]
exclude = [".venv"]

[tool.basedpyright]
include = ["*.py"]
stubPath = "typings"
typeCheckingMode = "strict"
